apollo-federation/src/connectors/expand/tests/snapshots/connectors@product_interface_v0_3.graphql.snap
---
source: apollo-federation/src/connectors/expand/tests/mod.rs
expression: connectors.by_service_name
input_file: apollo-federation/src/connectors/expand/tests/schemas/expand/product_interface_v0_3.graphql
---
{
    "products_Query_person_0": Connector {
        id: ConnectId {
            subgraph_name: "products",
            source_name: Some(
                "products-api",
            ),
            named: None,
            directive: Field(
                ObjectOrInterfaceFieldDirectivePosition {
                    field: Object(Query.person),
                    directive_name: "connect",
                    directive_index: 0,
                },
            ),
        },
        transport: HttpJsonTransport {
            source_template: Some(
                StringTemplate {
                    parts: [
                        Constant(
                            Constant {
                                value: "http://localhost:3001",
                                location: 0..21,
                            },
                        ),
                    ],
                },
            ),
            connect_template: StringTemplate {
                parts: [
                    Constant(
                        Constant {
                            value: "/users/",
                            location: 0..7,
                        },
                    ),
                    Expression(
                        Expression {
                            expression: JSONSelection {
                                inner: Path(
                                    PathSelection {
                                        path: WithRange {
                                            node: Var(
                                                WithRange {
                                                    node: $args,
                                                    range: Some(
                                                        0..5,
                                                    ),
                                                },
                                                WithRange {
                                                    node: Key(
                                                        WithRange {
                                                            node: Field(
                                                                "id",
                                                            ),
                                                            range: Some(
                                                                6..8,
                                                            ),
                                                        },
                                                        WithRange {
                                                            node: Empty,
                                                            range: Some(
                                                                8..8,
                                                            ),
                                                        },
                                                    ),
                                                    range: Some(
                                                        5..8,
                                                    ),
                                                },
                                            ),
                                            range: Some(
                                                0..8,
                                            ),
                                        },
                                    },
                                ),
                                spec: V0_4,
                            },
                            location: 8..16,
                        },
                    ),
                ],
            },
            method: Get,
            headers: [],
            body: None,
            source_path: None,
            source_query_params: None,
            connect_path: None,
            connect_query_params: None,
        },
        selection: JSONSelection {
            inner: Named(
                SubSelection {
                    selections: [
                        NamedSelection {
                            prefix: None,
                            path: PathSelection {
                                path: WithRange {
                                    node: Key(
                                        WithRange {
                                            node: Field(
                                                "id",
                                            ),
                                            range: Some(
                                                0..2,
                                            ),
                                        },
                                        WithRange {
                                            node: Empty,
                                            range: Some(
                                                2..2,
                                            ),
                                        },
                                    ),
                                    range: Some(
                                        0..2,
                                    ),
                                },
                            },
                        },
                        NamedSelection {
                            prefix: None,
                            path: PathSelection {
                                path: WithRange {
                                    node: Key(
                                        WithRange {
                                            node: Field(
                                                "name",
                                            ),
                                            range: Some(
                                                3..7,
                                            ),
                                        },
                                        WithRange {
                                            node: Empty,
                                            range: Some(
                                                7..7,
                                            ),
                                        },
                                    ),
                                    range: Some(
                                        3..7,
                                    ),
                                },
                            },
                        },
                    ],
                    range: Some(
                        0..7,
                    ),
                },
            ),
            spec: V0_4,
        },
        config: None,
        max_requests: None,
        entity_resolver: Some(
            Explicit,
        ),
        spec: V0_4,
        schema_subtypes_map: {
            "Product": {
                "Book",
                "Film",
            },
        },
        request_headers: {},
        response_headers: {},
        request_variable_keys: {
            $args: {
                "id",
            },
        },
        response_variable_keys: {},
        batch_settings: None,
        error_settings: ConnectorErrorsSettings {
            message: None,
            source_extensions: None,
            connect_extensions: None,
            connect_is_success: None,
        },
        label: Label(
            "products.products-api http: GET /users/{$args.id}",
        ),
    },
    "products_Query_products_0": Connector {
        id: ConnectId {
            subgraph_name: "products",
            source_name: Some(
                "products-api",
            ),
            named: None,
            directive: Field(
                ObjectOrInterfaceFieldDirectivePosition {
                    field: Object(Query.products),
                    directive_name: "connect",
                    directive_index: 0,
                },
            ),
        },
        transport: HttpJsonTransport {
            source_template: Some(
                StringTemplate {
                    parts: [
                        Constant(
                            Constant {
                                value: "http://localhost:3001",
                                location: 0..21,
                            },
                        ),
                    ],
                },
            ),
            connect_template: StringTemplate {
                parts: [
                    Constant(
                        Constant {
                            value: "/products",
                            location: 0..9,
                        },
                    ),
                ],
            },
            method: Get,
            headers: [],
            body: None,
            source_path: None,
            source_query_params: None,
            connect_path: None,
            connect_query_params: None,
        },
        selection: JSONSelection {
            inner: Path(
                PathSelection {
                    path: WithRange {
                        node: Var(
                            WithRange {
                                node: $,
                                range: Some(
                                    0..1,
                                ),
                            },
                            WithRange {
                                node: Key(
                                    WithRange {
                                        node: Field(
                                            "items",
                                        ),
                                        range: Some(
                                            2..7,
                                        ),
                                    },
                                    WithRange {
                                        node: Selection(
                                            SubSelection {
                                                selections: [
                                                    NamedSelection {
                                                        prefix: Alias(
                                                            Alias {
                                                                name: WithRange {
                                                                    node: Field(
                                                                        "__typename",
                                                                    ),
                                                                    range: Some(
                                                                        10..20,
                                                                    ),
                                                                },
                                                                range: Some(
                                                                    10..21,
                                                                ),
                                                            },
                                                        ),
                                                        path: PathSelection {
                                                            path: WithRange {
                                                                node: Expr(
                                                                    WithRange {
                                                                        node: String(
                                                                            "Book",
                                                                        ),
                                                                        range: Some(
                                                                            24..30,
                                                                        ),
                                                                    },
                                                                    WithRange {
                                                                        node: Empty,
                                                                        range: Some(
                                                                            31..31,
                                                                        ),
                                                                    },
                                                                ),
                                                                range: Some(
                                                                    22..31,
                                                                ),
                                                            },
                                                        },
                                                    },
                                                    NamedSelection {
                                                        prefix: None,
                                                        path: PathSelection {
                                                            path: WithRange {
                                                                node: Key(
                                                                    WithRange {
                                                                        node: Field(
                                                                            "upc",
                                                                        ),
                                                                        range: Some(
                                                                            32..35,
                                                                        ),
                                                                    },
                                                                    WithRange {
                                                                        node: Empty,
                                                                        range: Some(
                                                                            35..35,
                                                                        ),
                                                                    },
                                                                ),
                                                                range: Some(
                                                                    32..35,
                                                                ),
                                                            },
                                                        },
                                                    },
                                                    NamedSelection {
                                                        prefix: None,
                                                        path: PathSelection {
                                                            path: WithRange {
                                                                node: Key(
                                                                    WithRange {
                                                                        node: Field(
                                                                            "title",
                                                                        ),
                                                                        range: Some(
                                                                            36..41,
                                                                        ),
                                                                    },
                                                                    WithRange {
                                                                        node: Empty,
                                                                        range: Some(
                                                                            41..41,
                                                                        ),
                                                                    },
                                                                ),
                                                                range: Some(
                                                                    36..41,
                                                                ),
                                                            },
                                                        },
                                                    },
                                                ],
                                                range: Some(
                                                    8..43,
                                                ),
                                            },
                                        ),
                                        range: Some(
                                            8..43,
                                        ),
                                    },
                                ),
                                range: Some(
                                    1..43,
                                ),
                            },
                        ),
                        range: Some(
                            0..43,
                        ),
                    },
                },
            ),
            spec: V0_4,
        },
        config: None,
        max_requests: None,
        entity_resolver: None,
        spec: V0_4,
        schema_subtypes_map: {
            "Product": {
                "Book",
                "Film",
            },
        },
        request_headers: {},
        response_headers: {},
        request_variable_keys: {},
        response_variable_keys: {},
        batch_settings: None,
        error_settings: ConnectorErrorsSettings {
            message: None,
            source_extensions: None,
            connect_extensions: None,
            connect_is_success: None,
        },
        label: Label(
            "products.products-api http: GET /products",
        ),
    },
}
